@@ -13,11 +13,10 @@ PKG_NAME=nm-applet
     exit 1
 }
 
-
-which gnome-autogen.sh || {
-    echo "You need to install gnome-common from the GNOME CVS"
-    exit 1
-}
-USE_GNOME2_MACROS=1 . gnome-autogen.sh
-
+(cd $srcdir;
+    autoreconf --install --symlink &&
+    intltoolize --force &&
+    autoreconf &&
+    ./configure --enable-maintainer-mode $@
+)
 
